--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
-    <link rel="stylesheet" href="dist/main.css">
+    <link rel="stylesheet" href="dist/build.css">
 </head>
 <body>
 <div id="example"></div>
@@ -13,6 +13,6 @@
 <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
 
 <!-- Main -->
-<script src="./dist/main.js"></script>
+<script src="./dist/build.js"></script>
 </body>
 </html>
