--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="dist/build.css">
 </head>
 <body>
-<div id="example"></div>
+<div id="app"></div>
 
 <!-- Dependencies -->
 <script src="./node_modules/react/umd/react.development.js"></script>
