--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
-    <link rel="stylesheet" href="dist/build.css">
+    <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,
+        user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <link rel="stylesheet" href="./plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./dist/build.css">
 </head>
 <body>
 <div id="app"></div>
