--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello React!</title>
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,
         user-scalable=0,width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="./plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_993146_za4wpwyl0a.css">
     <link rel="stylesheet" href="./dist/build.css">
 </head>
 <body>
